mule-user-guide/v/3.8/json-module-reference.adoc
=  JSON支持参考
:keywords: mule, studio, json, object notation

JSON是JavaScript Object Notation的缩写，是一种轻量级的数据交换格式。 JSON是用于表示简单数据结构和关联数组（称为对象）的基于文本的人类可读格式。

== 对象绑定

Mule支持将JSON数据绑定到对象，并使用 link:http://mvnrepository.com/artifact/com.fasterxml.jackson.core[杰克逊]框架将Java对象编组为JSON。 Jackson使用注释来描述如何将数据映射到Java对象模型。例如，使用JSON数据映射一个人的信息：

[source, java, linenums]
----
@JsonAutoDetect
public class Person
{
    private String name;
    private String dob;
    private List<EmailAddress> emailAddresses;
    public String getName() { return name; }
    public void setName(String name) { this.name = name; }
    public String getDob() { return dob; }
    public void setDob(String dob) { this.dob = dob; }
    public List<EmailAddress> getEmailAddresses() { return emailAddresses; }
    public void setEmailAddresses(List<EmailAddress> emailAddresses) { this.emailAddresses = emailAddresses; }
}
----

要将此JSON数据映射到对象`Person`，请使用注释来描述如何执行映射。

我们使用`@JsonAutoDetect`来表示字段成员名称直接映射到JSON字段名称：

[source, java, linenums]
----
@JsonAutoDetect
public class Person
{
    private String name;
    private String dob;
    private List<EmailAddress> emailAddresses;
    public String getName() { return name; }
    public void setName(String name) { this.name = name; }
    public String getDob() { return dob; }
    public void setDob(String dob) { this.dob = dob; }
    public List<EmailAddress> getEmailAddresses() { return emailAddresses; }
    public void setEmailAddresses(List<EmailAddress> emailAddresses) { this.emailAddresses = emailAddresses; }
}
----

_emailAddresses_中的`EmailAddress`对象只是另一个带有`@JsonAutoDetect`注释的JavaBean。

此时Mule可以根据被调用的方法的参数判断是否执行JSON转换。例如：

[source, java, linenums]
----
public class PersonComponent {
    public void processPerson(@Payload Person person)
    {
  //tickle
    }
}
----

此示例接收端点上的上一个`people.json`文件的内容，Mule确保`Person.class`是带注释的JSON对象，我们已从JMS队列接收JSON数据并执行转换。

=== 全局JSON映射器

Jackson框架通过`ObjectMapper`执行映射。这是一个可以配置为序列化数据和定义混合的对象，可以将注释添加到不能直接更改的对象。您还可以定义全局`ObjectMapper`;一个用于应用程序中所有JSON转换的映射器。这不是必需的，因为Mule会为变换器自动创建一个映射器，但是如果您需要在映射器上配置特定属性或使用mixins，则使用全局映射器可能会很有用。要创建共享的`ObjectMapper`，请将以下内容添加到您的Mule配置文件中：

[source, xml, linenums]
----
<json:mapper name="myMapper">
    <json:mixin mixinClass="org.mule.module.json.transformers.FruitCollectionMixin"
      targetClass="org.mule.module.json.transformers.FruitCollection"/>
    <json:mixin mixinClass="org.mule.module.json.transformers.AppleMixin"
      targetClass="org.mule.tck.testmodels.fruit.Apple"/>
</json:mapper>
----

=== 截取JSON转换

到目前为止，我们已经讨论过Mule如何执行自动JSON转换。有时你可能想要拦截变换，为此，只需使用JSON类的方法返回或参数类型创建一个变换器即可：

[source, java, linenums]
----
@Transformer(sourceTypes = {InputStream.class})
public Person toPerson(String json, ObjectMapper mapper) throws JAXBException
{
    return (Person)mapper.readValue(in, Person.class);
}
----

`ObjectMapper`实例可为您创建或为您的应用程序使用全局上下文。这样做的一个原因是去掉一些JSON元素并从接收到的JSON子集中创建对象。有关变换的更多信息，请参阅 link:/mule-user-guide/v/3.8/using-transformers[使用变形金刚]部分。

==  JsonPath

目前没有用于查询JSON数据图的标准语言，与XPATH可以查询XML文档的方式相同。 Mule提供了一种简单的查询语法来处理Java中的JSON数据，称为JsonPath。

此查询语法提供了一种导航JSON数据结构的简单方法。以下JSON数据演示了如何使用JsonPath查询：

[source, java, linenums]
----
{
    "name":"John Doe",
    "dob":"01/01/1970",
    "emailAddresses":[
        {
            "type":"home",
            "address":"john.doe@gmail.com"
        },
        {
            "type":"work",
            "address":"jdoe@bigco.com"
        }
    ]
}
----

选择一个子项目：

[source]
----
name
----

要访问数组数据，请使用带有索引值的方括号：

[source]
----
emailAddresses[0]/type
----

或者，路线元素是一个数组：

[source]
----
[0]/arrayElement
----

要访问多维数组：

[source, code]
----
filters[1]/init[1][0]
----

这很少见，但如果Json属性名称包含'/'，则该名称需要用单引号引起来：

[source, code]
----
results/'http://foo.com'/value
----

表达式中的===  JsonPath

[IMPORTANT]
====
JsonPath表达式评估器已被弃用。我们推荐您使用的机制是：

[source,xml,linenums]
----
<json:json-to-object-transformer
     returnClass="java.util.HashMap" />
<set-property propertyName="requestType"
     value="#[message.payload.requestType]"/>
B Extract simple
item C Extract value inside
an array
￼￼￼<set-property propertyName="productId"
     value="#[message.payload.products[0].productId]"/>
----
====


您可以在 link:/mule-user-guide/v/3.8/mule-expression-language-mel[骡子表达]中使用JsonPath来查询用于过滤的JSON消息负载或 link:/mule-user-guide/v/3.8/message-enricher[丰富]。

例如，要使用JsonPath执行基于内容的路由：

[source, xml, linenums]
----
<choice>
  <when expression="emailAddresses[0]/type = 'home'" evaluator="json">
    <append-string-transformer message="Home address is #[json:emailAddresses[0]/address]" />
  </when>
  <when expression="emailAddresses[0]/type = 'work'" evaluator="json">
    <append-string-transformer message="Work address is #[json:emailAddresses[0]/address]" />
  </when>
  <otherwise>
    <append-string-transformer message=" No email address found" />
  </otherwise>
</choice>
----

表达式计算器名称是'json'，表达式是任何有效的JsonPath表达式。

在执行布尔表达式（如上例）时，支持运算符：

[%header,cols="10,90"]
|===
| {算{1}}示例
| *=* a |
[source, code]
----
emailAddresses[0]/type = 'foo' or emailAddresses[0]/flag = true
----
| *!=* a |
[source, code]
----
emailAddresses[0]/type != null or emailAddresses[0]/flag != false
----
|===

字符串比较需要使用单引号，'null'被识别为空，并且支持布尔比较。如果检查数字值只是将它们视为一个字符串。

== 配置参考

==  JSON模块

JSON模块包含许多工具来帮助您读取，转换和编写JSON。

=== 变压器

这些是这种运输特有的变压器。请注意，这些会在启动时自动添加到Mule注册表中。当进行自动转换时，这些包括在搜索正确的变压器时。

[%header%autowidth.spread]
|===
| {名称{1}}说明
| `json-to-object-transformer`  |将JSON编码的对象图转换为java对象的转换器。对象类型由'returnClass'属性确定。请注意，这个转换器支持数组和列表。例如，要将JSON字符串转换为org.foo.Person数组，请设置`returnClass=org.foo.Person[]`。 JSON引擎可以使用jsonConfig属性进行配置。这是对net.sf.json.JsonConfig实例的对象引用。这可以创建为spring bean。
| `json-to-xml-transformer`  |将JSON字符串转换为XML字符串
| `xml-to-json-transformer`  |将XML字符串转换为JSON字符串
| `json-xslt-transformer`  |使用XSLT转换JSON字符串
| `object-to-json-transformer`  |将Java对象转换为JSON编码的对象，该对象可以被其他语言（如Javascript或Ruby）使用。 JSON对象映射器可以使用`mapper-ref`属性进行配置。这是对`org.codehaus.jackson.Mapper`实例的对象引用。这可以创建为spring bean。通常默认的映射器就足够了。在序列化对象时，用户经常配置排除或包含。这可以通过在对象上直接使用Jackson注释来完成（请参阅 link:http://mvnrepository.com/artifact/org.codehaus.jackson/jackson-mapper-asl[杰克逊的数据映射器]）如果无法直接注释对象，则可以使用mixin向使用AOP的对象添加注释。在 link:http://www.cowtowncoder.com/blog/archives/08-01-2009_08-31-2009.html[处理非标准的“JSON”]中对此方法有很好的描述。要为您的对象配置mixin，请配置`mapper-ref`属性或使用<serialization-mixin>元素将其注册到转换器。此变压器的returnClass通常为`java.lang.String`，`byte[]`也可以使用。此时变压器不支持流式传输。
|===

=== 过滤器

可以使用过滤器来控制允许哪些数据在流中继续。

[%header,cols="30a,70a"]
|====
| {名称{1}}说明
| `is-json-filter`  |确定当前消息有效内容是否为JSON编码消息的过滤器。
| `json-schema-validation-filter`  |针对XML模式验证JSON。此元素已弃用。改用`validate-schema`
|====

== 验证架构

验证消息有效负载表示符合给定JSON模式的JSON。

=== 验证模式的属性

[%header%autowidth.spread]
|===
| {名称{1}}说明
| `schemaLocation`  |要找到要验证的模式的位置。此属性支持URI表示，例如`http://org.mule/schema.json`或`resource:/schema.json`。它还支持最常见的类路径引用，如`schema.json`。 +
*Type*：`string` +
*Required*：是+
*Default*：无
| `dereferencing`  |第4版草案定义了两种解引用模式：规范和内联。 Canonical是默认选项，但也可以指定INLINE。验证v3草稿时，该属性将被忽略。 +
*Type*：`dereferencingType` +
*Required*：是+
*Default*：`CANONICAL`
|===

验证模式的=== 子元素

[%header%autowidth.spread]
|===
| {名称{1}}基数 |说明
| `schema-redirects`  | 0..1  |允许将架构中的任何给定URI（甚至架构位置本身）重定向到任何其他特定的URI。此功能最常见的用例是映射外部名称空间URI而不需要本地资源
|===

== 映射器

杰克逊映射器用于JSON变压器。这不是必需的，但可以用来在映射器上配置mixin。

映射器的=== 属性

[%header,cols="30a,70a"]
|===
| {名称{1}}说明
| `name`  |映射器的名称，用于通过变换器元素对其进行引用。 +
*Type*：`string` +
*Required*：是+
*Default*：无
|===

映射器的=== 子元素

[%header%autowidth.spread]
|===
| {名称{1}}基数 |说明
| `mixin`  | {0..1 {3}}
|===

